# Dicewars

./: .gitignore  CMakeLists.txt  Makefile  README.md  interface.c  interface.h  main.c  map.c  map.h  util.h
src/: Makefile  arbiter.c  arbiter.h  dicewars  game.c  game.h  init.c  init.h  interface.c  interface.h  main.c  map.c  map.h  output.c  output.h  util.c  util.h
src/IA/: chienFou.c  proba.h  stratAlpha.c  utilIA.c  utilIA.h
src/display/: map.c  map.h
src/logs/: output.c  output.h
src/utils/: init.c  init.h  util.c  util.h
